--- a/explore.adoc
+++ b/explore.adoc
@@ -53,10 +53,14 @@ Password: {{USER_PASSWORD}}
 Once you have authenticated to the OpenShift server, you will see the
 following confirmation message:
 
-[source,bash]
+[source]
 ----
 Login successful.
-{% if NO_USER_PROJECT != true %}
+{% if NO_USER_PROJECT == "true" %}
+You don't have any projects. You can try to create a new project, by running
+
+    oc new-project <projectname>
+{% else %}
 Using project "{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}".
 {% endif %}
 ----
@@ -80,7 +84,7 @@ During this lab, we are going to use a few different commands to make sure that
 things in the environment are working as expected.  Don't worry if you don't
 understand all of the terminology as we will cover it in detail in later labs.
 
-{% if NO_USER_PROJECT == true %}
+{% if NO_USER_PROJECT == "true" %}
 The first thing we want to do is create the *{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}*
 project. You can do this with the following command:
 
@@ -146,7 +150,7 @@ image::explore-webconsole2.png[Explore Project]
 
 {% if METRICS_ENABLED %}
 
-In case the web console shows you an error: 
+In case the web console shows you an error:
 
 image::explore-webconsole2-error.png[Web Console]
 
