--- a/environment.adoc
+++ b/environment.adoc
@@ -29,14 +29,15 @@ The infrastructure node is providing several services:
 
 Additionally, {{ NUM_USERS }} user accounts have been provisioned.
 
-{% if ETHERPAD_ENABLED == 'true' %}
+{% if ETHERPAD_ENABLED %}
 Before continuing, please visit visit the Firepad at the following URL:
 
 ----
-http://{{ ETHERPAD_URL_PREFIX }}.{{ ROUTER_ADDRESS }}/#roadshow
+http://{{ ETHERPAD_URL_PREFIX }}.{{ ROUTER_ADDRESS }}/p/workshop
 ----
 
-Decide on a user account, between user01 and user{{ NUM_USERS }}. Type that user
+Decide on a user account, between user01 and user{{ NUM_USERS }}, or use the one that
+has been assigned to you by the instructor. Type that user
 account and your name next to it. This will be your user account for the
 duration of these exercises. For example:
 
