--- a/explore.adoc
+++ b/explore.adoc
@@ -4,13 +4,13 @@
 
 The first thing we want to do to ensure that our `oc` command line tools was
 installed and successfully added to our path is to log in to the OpenShift
-environment that has been provided for this Roadshow session.  In
+environment that has been provided for this Workshop session.  In
 order to log in, we will use the `oc` command and then specify the server that we
 want to authenticate to.  Issue the following command:
 
 [source,bash]
 ----
-$ oc login {{CONSOLE_ADDRESS}}
+$ oc login https://{{CONSOLE_ADDRESS}}
 ----
 
 You may see the following output:
@@ -37,7 +37,7 @@ the following command:
 
 [source,bash]
 ----
-$ oc login {{CONSOLE_ADDRESS}} --insecure-skip-tls-verify=true
+$ oc login https://{{CONSOLE_ADDRESS}} --insecure-skip-tls-verify=true
 ----
 ====
 
