--- a/permissions.adoc
+++ b/permissions.adoc
@@ -60,7 +60,7 @@ to see what resources are within the *Project*. This also has the added benefit
 of suppressing the error message! Although, in reality, we fixed the application.
 
 Another way you could have done the same is by using the OpenShift console. Once you're on the 
-*"Applications --> Membership"* page, click on Service Accounts, and then on *"Edit Membership"* button.
+*"Resources --> Membership"* page, click on Service Accounts, and then on *"Edit Membership"* button.
 
 image::membership_serviceaccount-list.png[Service account list]
 
