--- a/environment.adoc
+++ b/environment.adoc
@@ -23,14 +23,14 @@ The infrastructure node is providing several services:
 * This lab manual
 * The OpenShift Docker registry
 * The OpenShift router
-{% if ETHERPAD_ENABLED == 'true' %}
+{% if ETHERPAD_ENABLED %}
 * Etherpad
 {% endif %}
 
 Additionally, {{ NUM_USERS }} user accounts have been provisioned.
 
 {% if ETHERPAD_ENABLED %}
-Before continuing, please visit visit the Firepad at the following URL:
+Before continuing, please visit visit the Etherpad at the following URL:
 
 ----
 http://{{ ETHERPAD_URL_PREFIX }}.{{ ROUTER_ADDRESS }}/p/workshop
