--- a/databases-py.adoc
+++ b/databases-py.adoc
@@ -182,6 +182,8 @@ stood up a "new" instance.
 Now that we have a database deployed, we can again visit the `nationalparks` web
 service to query for data:
 
+CAUTION: In the following url(s), replace `{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}` with the project provided to you.
+
 [source,bash]
 ----
 http://nationalparks-{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}.{{ROUTER_ADDRESS}}/ws/data/all
@@ -199,6 +201,8 @@ application and then deployed the database. Nothing actually loaded anything
 *INTO* the database, though.
 
 The application provides an endpoint to do just that:
+
+CAUTION: In the following url(s), replace `{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}` with the project provided to you.
 
 [source,bash]
 ----
@@ -227,6 +231,10 @@ for application portability across different environments.  The source file that
 performs the connection as well as creates the database schema can be viewed
 here:
 
+{% if GIT_HOST != "github" %}
+CAUTION: In the following url(s), replace `{{GITLAB_USER}}` with the Git username provided to you.
+{% endif %}
+
 [source,bash,role=copypaste]
 ----
 {% if PARKSMAP_PY %}
@@ -248,6 +256,8 @@ You can learn more about environment variables in the
 https://docs.openshift.org/dev_guide/environment_variables.html[environment
 variables] section of the Developer Guide.
 ====
+
+CAUTION: In the following url(s), replace `{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}` with the project provided to you.
 
 [source,bash]
 ----
@@ -316,6 +326,8 @@ route "nationalparks" labeled
 ----
 
 If you check your browser now:
+
+CAUTION: In the following url(s), replace `{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}` with the project provided to you.
 
 [source,bash]
 ----
