--- a/nationalparks-codechanges-gogs.adoc
+++ b/nationalparks-codechanges-gogs.adoc
@@ -10,7 +10,7 @@ hook at the OpenShift API, automated code/build/deploy pipelines can be
 achieved.
 
 #### Exercise: Configuring Gogs Web Hooks
-In this lab you can use a build webhook to trigger a build execution every time there is a change in the nationalparks Gogs repository. In the OpenShift web console, navigate to your `userXY` project, and then mouse-over `Builds` and then `Builds`. Click the `nationalparks` build and then `Configuration` tab.
+In this lab you can use a build webhook to trigger a build execution every time there is a change in the nationalparks Gogs repository. In the OpenShift web console, navigate to your `{{ USER_PROJECT }}` project, and then mouse-over `Builds` and then `Builds`. Click the `nationalparks` build and then `Configuration` tab.
 
 On this screen you will see the option to copy the generic webhook URL as shown in the following image:
 
@@ -19,11 +19,11 @@ image::nationalparks-codechanges-webhook-config.png[Webhook]
 Once you have the URL copied to your clipboard, navigate to the code repository
 that you have on your local Gogs:
 
-CAUTION: In the following url(s), replace `userXY` with the Git username provided to you.
+CAUTION: In the following url(s), replace `{{ USER_NAME }}` with the Git username provided to you.
 
 [source,bash,role=copypaste]
 ----
-http://gogs-{{INFRA_PROJECT}}.{{ROUTER_ADDRESS}}/userXY/nationalparks
+http://gogs-{{INFRA_PROJECT}}.{{ROUTER_ADDRESS}}/{{ USER_NAME }}/nationalparks
 ----
 
 [NOTE]
@@ -111,11 +111,11 @@ nationalparks-2   Source    Git@3b26e1a   Running    43 seconds ago
 Once the build and deploy has finished, verify your new Docker image was
 automatically deployed by viewing the application in your browser:
 
-CAUTION: In the following url(s), replace `userXY` with the project provided to you.
+CAUTION: In the following url(s), replace `{{ USER_PROJECT }}` with the project provided to you.
 
 [source,bash,role=copypaste]
 ----
-http://nationalparks-userXY.{{ROUTER_ADDRESS}}/ws/info/
+http://nationalparks-{{ USER_PROJECT }}.{{ROUTER_ADDRESS}}/ws/info/
 ----
 
 You should now see the new name you have set in the JSON string returned.
@@ -167,11 +167,11 @@ Warning: the following images triggers were disabled: nationalparks:live
 Once the deploy is complete, verify that the page header is reverted to the
 original header by viewing the application in your browser.
 
-CAUTION: In the following url(s), replace `userXY` with the project provided to you.
+CAUTION: In the following url(s), replace `{{ USER_PROJECT }}` with the project provided to you.
 
 [source,bash,role=copypaste]
 ----
-http://nationalparks-userXY.{{ROUTER_ADDRESS}}/ws/info/
+http://nationalparks-{{ USER_PROJECT }}.{{ROUTER_ADDRESS}}/ws/info/
 ----
 
 [NOTE]
