--- a/nationalparks-java.adoc
+++ b/nationalparks-java.adoc
@@ -67,11 +67,11 @@ application code!
 The repository that we are going to use is already cloned in the internal Gogs repository
 and located at the following URL:
 
-CAUTION: In the following url(s), replace `userXY` with the Gogs username provided to you. Your Gogs credentials are the same as your openshift credentials
+CAUTION: In the following url(s), replace `{{ USER_NAME }}` with the Gogs username provided to you. Your Gogs credentials are the same as your openshift credentials
 
 [source,role=copypaste]
 ----
-http://gogs-{{INFRA_PROJECT}}.{{ROUTER_ADDRESS}}/userXY/nationalparks.git
+http://gogs-{{INFRA_PROJECT}}.{{ROUTER_ADDRESS}}/{{ USER_NAME }}/nationalparks.git
 ----
 
 Later in the lab, we want you to make a code change and then rebuild your
@@ -83,9 +83,9 @@ Similar to how we used "Add to project" before with a Docker-formatted image, we
 can do the same for specifying a source code repository. Since for this lab you
 have your own git repository, let's use it with a simple Java S2I image.
 
-CAUTION: In the following url(s), replace `userXY` with the project provided to you.
+CAUTION: In the following url(s), replace `{{ USER_PROJECT }}` with the project provided to you.
 
-In the OpenShift web console, find your `userXY` project, and then
+In the OpenShift web console, find your `{{ USER_PROJECT }}` project, and then
 click the *"Add to Project"* button and then the browse catalog link as highlighted in the following image:
 
 image::nationalparks-java-show-catalog.png[Add to Project]
@@ -103,11 +103,11 @@ image::nationalparks-java-new-java-service.png[Add Java]
 Click on the "Next" button and then enter a name and a Git repository URL. For the name, enter `nationalparks`,
 and for the Git repository URL, enter:
 
-CAUTION: In the following url(s), replace `userXY` with the Git username provided to you.
+CAUTION: In the following url(s), replace `{{ USER_NAME }}` with the Git username provided to you.
 
 [source,role=copypaste]
 ----
-http://gogs-{{INFRA_PROJECT}}.{{ROUTER_ADDRESS}}/userXY/nationalparks.git
+http://gogs-{{INFRA_PROJECT}}.{{ROUTER_ADDRESS}}/{{ USER_NAME }}/nationalparks.git
 ----
 
 NOTE: All of these runtimes shown are made available via *Templates* and
@@ -207,17 +207,17 @@ Where you should see something like the following:
 [source,bash]
 ----
 NAME            HOST/PORT                                                   PATH      SERVICES        PORT       TERMINATION
-nationalparks   nationalparks-userXY.{{ROUTER_ADDRESS}}             nationalparks   8080-tcp
-parksmap        parksmap-userXY.{{ROUTER_ADDRESS}}                  parksmap        8080-tcp
+nationalparks   nationalparks-{{ USER_PROJECT }}.{{ROUTER_ADDRESS}}             nationalparks   8080-tcp
+parksmap        parksmap-{{ USER_PROJECT }}.{{ROUTER_ADDRESS}}                  parksmap        8080-tcp
 ----
 
 In the above example, the URL is:
 
-CAUTION: In the following url(s), replace `userXY` with the project provided to you.
+CAUTION: In the following url(s), replace `{{ USER_PROJECT }}` with the project provided to you.
 
 [source,bash]
 ----
-http://nationalparks-userXY.{{ROUTER_ADDRESS}}
+http://nationalparks-{{ USER_PROJECT }}.{{ROUTER_ADDRESS}}
 ----
 
 Since this is a back-end application, it doesn't actually have a web interface.
@@ -225,11 +225,11 @@ However, it can still be used with a browser. All backends that work with the pa
 frontend are required to implement a `/ws/info/` endpoint. To test, the
 complete URL to enter in your browser is:
 
-CAUTION: In the following url(s), replace `userXY` with the project provided to you.
+CAUTION: In the following url(s), replace `{{ USER_PROJECT }}` with the project provided to you.
 
 [source,bash,role=copypaste]
 ----
-http://nationalparks-userXY.{{ROUTER_ADDRESS}}/ws/info/
+http://nationalparks-{{ USER_PROJECT }}.{{ROUTER_ADDRESS}}/ws/info/
 ----
 
 WARNING: The trailing slash is *required*.
