--- a/parksmap-logging.adoc
+++ b/parksmap-logging.adoc
@@ -108,23 +108,23 @@ image::parksmap-logging-kibana.png[Kibana Interface]
 
 The "View Archive" link that you clicked takes you to a default view with a specific search term
 pre-populated. Kibana will only show you logs where the pod name is
-`parksmap-1-hx0kv` and in the *Project* (namespace) userXY.
+`parksmap-1-hx0kv` and in the *Project* (namespace) {{ USER_PROJECT }}.
 
-CAUTION: In the following url(s), replace `userXY` with the project provided to you and the pod_name to match your pod.
+CAUTION: In the following url(s), replace `{{ USER_PROJECT }}` with the project provided to you and the pod_name to match your pod.
 
 [source,bash]
 ----
-kubernetes.pod_name:"parksmap-1-hx0kv" AND kubernetes.namespace_name:"userXY"
+kubernetes.pod_name:"parksmap-1-hx0kv" AND kubernetes.namespace_name:"{{ USER_PROJECT }}"
 ----
 
 If you want to see all the historical logs for this *Project*, simply remove the
 pod name reference and click the magnifying glass or press the enter key.
 
-CAUTION: In the following url(s), replace `userXY` with the project provided to you.
+CAUTION: In the following url(s), replace `{{ USER_PROJECT }}` with the project provided to you.
 
 [source,bash,role=copypaste]
 ----
-kubernetes.namespace_name:"userXY"
+kubernetes.namespace_name:"{{ USER_PROJECT }}"
 ----
 
 If you click the "x" in the column for the container name, and, in the left bar,
@@ -136,11 +136,11 @@ image::parksmap-logging-kibana-parksmap-headers.png[Kibana Interface]
 
 Try the following search string ensuring that you use the correct name for your project:
 
-CAUTION: In the following url(s), replace `userXY` with the project provided to you.
+CAUTION: In the following url(s), replace `{{ USER_PROJECT }}` with the project provided to you.
 
 [source,bash,role=copypaste]
 ----
-kubernetes.namespace_name:"userXY" AND message:"Failure executing"
+kubernetes.namespace_name:"{{ USER_PROJECT }}" AND message:"Failure executing"
 ----
 
 
