--- a/parksmap-routes.adoc
+++ b/parksmap-routes.adoc
@@ -63,7 +63,7 @@ Verify the *Route* was created with the following command:
 ----
 $ oc get route
 NAME       HOST/PORT                            PATH      SERVICES   PORT       TERMINATION
-parksmap   parksmap-userXY.{{ROUTER_ADDRESS}}             parksmap   8080-tcp
+parksmap   parksmap-{{ USER_PROJECT }}.{{ROUTER_ADDRESS}}             parksmap   8080-tcp
 ----
 
 You can also verify the *Route* by looking at the project in the OpenShift web console:
